--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,51 @@
 body {
-    margin-top: 150px;
-    background-image: url('./images/arenabg.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-
+  margin-top: 150px;
+  background-image: url("./images/arenabg.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
 
 .container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
 }
 
 h3 {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 img {
-    width: 200px;
-    height: auto;
-    position: relative;
-    left: 0px;
+  width: 200px;
+  height: auto;
+  position: relative;
+  left: 0px;
 }
 
 ul {
-    margin: 0px;
-    padding: 0px;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: white;
-    text-shadow: 35px;
+  margin: 0px;
+  padding: 0px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  text-shadow: 35px;
 }
 
 li {
-    list-style-type: none;
-    font-size: 18px;
-    padding-top: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    color: white;
-    text-shadow: 1px 1.5px black;
+  list-style-type: none;
+  font-size: 18px;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  text-shadow: 1px 1.5px black;
 }
